try increasing the perm gen for ITs to get them to pass